[tool.poetry]
name = "bayraktarogram"
version = "0.1.0"
description = ""
authors = ["OlegAndrienko <OlegAndrienko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
redis = "^4.6.0"
fastapi-limiter = "^0.1.5"
sqlalchemy = "^2.0.19"
pydantic = "1.10.11"
psycopg2 = "^2.9.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
libgravatar = "^1.0.4"
fastapi-mail = "1.3.1"
python-multipart = "^0.0.6"
cloudinary = "^1.33.0"
qrcode = "^7.4.2"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
